2003-10-09  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* doc/am-utils.texi (opts Option): Fix Tru64 UNIX name in proplist
	mount option.

2003-10-09  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* libamu/mount_fs.c (compute_nfs_args) [HAVE_NFS_ARGS_T_FH_LEN]:
	Don't reference removed fh3.

2003-10-09  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* NEWS: New minor port sparc-sun-solaris2.10 (Solaris 10).

	* INSTALL: Mention test status of various ports.
	Describe IRIX 6 autofs status.
	
2003-10-09  Ion Badulescu  <ionut@moisil.badula.org>

	* NEWS: updated

	* amd/amfs_generic.c (amfs_bgmount): don't use mf_fo until after
	we've done all the tests and we know we have a valid and mountable
	mntfs. Otherwise we could end up dereferencing null pointers.

	* amd/amd.h: fixed a copy&paste comment bug

	* amd/am_ops.c (ops_match): minor code cleanup

	* doc/am-utils.texi: fixed various typos; added warning about the
	racy nature of nfsx; removed duplicated listing of debug options;
	added paragraph about signals supported by hlfsd; removed the long
	list of (maybe) supported platforms since it duplicates the list
	in INSTALL.

2003-10-02  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	Simplify FD_SET etc. use.

	* include/am_defs.h (FD_SET, FD_ISSET, FD_CLR, FD_ZERO): Provide
	if missing. 
	(rpc_pending_now, run_rpc): Use them.
	* configure.in: Check for fds_bits field in fd_set.
	* amd/nfs_start.c (run_rpc): Use it.

2003-10-02  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	Improve RPC XID handling.

	* amd/rpc_fwd.c (fwd_packet, fwd_reply): Always log xid.
	Convert xid to/from host/network byte order.

2003-10-02  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	Use NFS V2/V3 file handles instead of mount results.

	* include/am_utils.h (am_nfs_fhandle): Use NFS V2/V3 file handles
	only, not MOUNTPROC_MNT results.
	* amd/amfs_host.c (fetch_fhandle): Use local variables to store
	MOUNTPROC_MNT results.
	* amd/autil.c (amfs_mount): Use new am_nfs_fhandle_t.