@@ -53,7 +53,7 @@ AH_BOTTOM([
 dnl
 dnl AC_CONFIG_AUX_DIR(m4)
 AC_PREREQ(2.52)
-AC_REVISION($Revision: 1.63 $)
+AC_REVISION($Revision: 1.64 $)
 AC_COPYRIGHT([Copyright (c) 1997-2003 Erez Zadok])
 dnl find out system type
 AC_MSG_NOTICE(*** SYSTEM TYPES ***)
@@ -945,6 +945,7 @@ AMU_CHECK_MNTTAB_OPTS(	\
 	pgthresh	\
 	port		\
 	posix		\
+	private		\
 	proplist	\
 	proto		\
 	retrans		\
@@ -1034,6 +1035,7 @@ AMU_CHECK_MNT2_NFS_OPTS(	\
 	nqnfs		\
 	pgthresh	\
 	posix		\
+	private		\
 	proplist	\
 	rdirplus	\
 	readahead	\
